--- a/style.css
+++ b/style.css
@@ -13,10 +13,13 @@ html{
     width: 100%;
 }
 body{
+    margin: 0;
+    height: 100%;
     width: 100%;
     display: flex;
     align-items: center;
     justify-content: center;
+    min-height: 100vh;
 }
 .cont{
     width: 90%;
@@ -72,8 +75,8 @@ body{
     background-size: 50%;
 }
 img{
-    width: 65%;
-    height: auto;
+    height: 100%;
+    width: auto;
     position: relative;
 }
 #enemy{
