--- a/style.css
+++ b/style.css
@@ -4,6 +4,7 @@
     --default-color: rgb(39, 39, 39);
     --disabled-color: rgb(7, 7, 7);
     --select-color: rgb(58, 58, 58);
+    --hover-color: rgb(34, 34, 34);
     --anim-dur: .3s;
 }
 *{
@@ -82,7 +83,9 @@ img{
 #enemy{
     transform: rotateY(180deg);
 }
-
+.move:hover{
+    background-color: var(--hover-color);
+}
 img.anim{
     animation-name: floating;
     animation-duration: var(--anim-dur);
