--- a/style.css
+++ b/style.css
@@ -9,6 +9,7 @@
 }
 *{
     user-select: none;
+    font-family: Arial, Helvetica, sans-serif;
 }
 html{
     width: 100%;
@@ -89,6 +90,9 @@ img{
 img.anim{
     animation-name: floating;
     animation-duration: var(--anim-dur);
+}
+.result{
+    font-size: 3rem;
 }
 @keyframes floating{
     0%{
