--- a/style.css
+++ b/style.css
@@ -79,6 +79,8 @@ body{
 img{
     height: 100%;
     width: auto;
+    max-width: 30vw;
+    max-height: 30vw;
     position: relative;
 }
 #enemy{
@@ -93,6 +95,16 @@ img.anim{
 }
 .result{
     font-size: 3rem;
+    width: 100%;
+    height: 3em;
+    text-align: center;
+}
+.scores{
+    width: 30vw;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
 }
 @keyframes floating{
     0%{
