--- a/style.css
+++ b/style.css
@@ -22,6 +22,7 @@ body{
     align-items: center;
     justify-content: center;
     min-height: 100vh;
+    background-color: rgb(179, 178, 178);
 }
 .cont{
     width: 90%;
